2023-12-30T00:43:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7360950859 # 2213
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-30
* notice: last 14d: unq all: 13 24
* notice: prev accum: outdated-unq outdated-all / unq all: 2167 6041 / 2176 6056
* notice: next accum: outdated-unq outdated-all / unq all: 2168 6043 / 2185 6067
* notice: prev exec diff / last date diff / accum: unq all: +9 +11 -0 -0 / +9 +11 -0 -0 / 9 11
* notice: removed / changed dates: [2023-12-15] / [2023-12-29]

2023-12-29T00:37:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7352472451 # 2210
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-29
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 2166 6039 / 2176 6056
* notice: next accum: outdated-unq outdated-all / unq all: 2167 6041 / 2176 6056
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-14] / []

2023-12-28T00:43:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7343146285 # 2207
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-28
* notice: last 14d: unq all: 4 17
* notice: prev accum: outdated-unq outdated-all / unq all: 2165 6037 / 2176 6056
* notice: next accum: outdated-unq outdated-all / unq all: 2166 6039 / 2176 6056
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-13] / []

2023-12-27T00:44:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7333804725 # 2204