@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-12-30T00:43:54Z",
+  "timestamp" : "2023-12-30T08:11:37Z",
   "count_outdated" : 6043,
   "uniques_outdated" : 2168,
-  "count" : 6067,
-  "uniques" : 2185,
+  "count" : 6084,
+  "uniques" : 2197,
   "clones" : [
     {
       "timestamp": "2023-12-16T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-12-17T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 9,
       "uniques_minmax": [ 9, 9 ],
       "uniques_decinc": [ 0, 9 ]
+    },
+    {
+      "timestamp": "2023-12-30T00:00:00Z",
+      "count": 17,
+      "count_minmax": [ 17, 17 ],
+      "count_decinc": [ 0, 17 ],
+      "uniques": 12,
+      "uniques_minmax": [ 12, 12 ],
+      "uniques_decinc": [ 0, 12 ]
     }
   ]
 }
