@@ -1,11 +1,11 @@
 {
-  "count": 24,
-  "uniques": 13,
+  "count": 39,
+  "uniques": 22,
   "clones": [
     {
       "timestamp": "2023-12-16T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-12-17T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2023-12-29T00:00:00Z",
       "count": 11,
       "uniques": 9
+    },
+    {
+      "timestamp": "2023-12-30T00:00:00Z",
+      "count": 17,
+      "uniques": 12
     }
   ]
 }
