@@ -1,3 +1,12 @@
+2023-12-30T08:11:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7362974464 # 2214
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-30
+* notice: last 14d: unq all: 22 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 2168 6043 / 2185 6067
+* notice: next accum: outdated-unq outdated-all / unq all: 2168 6043 / 2197 6084
+* notice: prev exec diff / last date diff / accum: unq all: +12 +17 -1 -2 / +12 +17 -0 -0 / 12 17
+* notice: removed / changed dates: [] / [2023-12-16 2023-12-30]
+
 2023-12-30T00:43:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7360950859 # 2213
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-30
